# crypto-benches

./: .tool-versions  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.sh
.github/workflows/: test.yml
results/: mac-studio-14.md
src/: aes-gcm-siv.rs  aes-gcm.rs  chacha20poly1305.rs  hashes.rs  macs.rs  main.rs
