[package]
name = "crypto-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
chacha20poly1305 = "0.10.1"
ring = "0.16.20"
rand = "0.8.5"

[[bench]]
name = "aes-gcm"
path = "src/aes-gcm.rs"
harness = false

[[bench]]
name = "aes-gcm-siv"
path = "src/aes-gcm-siv.rs"
harness = false

[[bench]]
name = "chacha20poly1305"
path = "src/chacha20poly1305.rs"
harness = false