[package]
name = "crypto-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
chacha20poly1305 = "0.10.1"
ring = "0.17.13"
rand = "0.8.5"
blake3 = { version = "1.5.0", default-features = false, features = ["neon"] }
sha2 = { version = "0.10.8", features = ["asm-aarch64"] }
hmac = "0.12.1"
sha3 = { version = "0.10.8", default-features = false, features = ["asm"] }
tiny-keccak = { version = "2.0.2", features = ["k12"] }
cmac = "0.7.2"
pmac = "0.7.1"
aes = "0.8.3"
aws-lc-rs = "1.8.1"

[[bench]]
name = "aes-gcm"
path = "src/aes-gcm.rs"
harness = false

[[bench]]
name = "aes-gcm-siv"
path = "src/aes-gcm-siv.rs"
harness = false

[[bench]]
name = "chacha20poly1305"
path = "src/chacha20poly1305.rs"
harness = false

[[bench]]
name = "hashes"
path = "src/hashes.rs"
harness = false

[[bench]]
name = "macs"
path = "src/macs.rs"
harness = false
